--- a/patterns/01-molecules-blocks/index.html
+++ b/patterns/01-molecules-blocks/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
     
-    <link rel="stylesheet" href="../../css/style.css?1512065780282" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1512065780282" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1512648619560" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1512648619560" media="all" />
     
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -16,8 +16,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1512065780282" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1512065780282" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1512648619560" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1512648619560" media="all" />
 
     <!-- End Pattern Lab -->
   
@@ -52,18 +52,30 @@
   </div>
   <div class="sg-pattern-example">
     <div class="article_block">
-  <img src="../../image/button_black.png" alt="Avatar" class="" />
-<img src="../../image/button_black2.png" alt="Avatar" class="" />
-<img src="../../image/button_black3.png" alt="Avatar" class="" />
 
-  <h2>This is a button </h2>
-  <p>A paragraph (from the Greek paragraphos, "to write beside" or "written beside") is a self-contained unit of a discourse in writing dealing with a particular point or idea. A paragraph consists of one or more sentences. Though not required by the syntax of any language, paragraphs are usually an expected part of formal writing, used to organize longer prose.</p>
+  <button class="c-btn-rubric">
+  Democracking
+</button>
 
+  <div class="hover-article-on">  
+<div class="picthover">
+<div class="heartmargin"><img src="../../image/heartwhite.png" alt="Avatar" class="" />
+</div>
+  <img src="../../image/clockwhite.png" alt="Avatar" class="" />
+
+
+</div>
+</div>
+  <img src="../../image/girl.png" alt="Avatar" class="article-image" />
+
+<div class="title">Jean-Pierre Coffe arrêté pour trafic de bitcoins, plus de 700.000 euros détournés</div>
+<div class="resume">Ses amis et sa famille sous le choc, nous raconte les secrets de meilleures recettes avant qu’il ne soit trop tard. </div>
+<div class="autor">Jean Roucas / 31.09.17</div>
 </div>
 
   </div>
   <script type="text/json" id="sg-pattern-data-molecules-article_block" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":true,"patternLineages":[{"lineagePattern":"atoms-button","lineagePath":"../../patterns/00-atoms-buttons-button/00-atoms-buttons-button.rendered.html"},{"lineagePattern":"atoms-paragraph","lineagePath":"../../patterns/00-atoms-text-paragraph/00-atoms-text-paragraph.rendered.html"}],"lineage":[{"lineagePattern":"atoms-button","lineagePath":"../../patterns/00-atoms-buttons-button/00-atoms-buttons-button.rendered.html"},{"lineagePattern":"atoms-paragraph","lineagePath":"../../patterns/00-atoms-text-paragraph/00-atoms-text-paragraph.rendered.html"}],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"organismes-article_list","lineagePath":"../../patterns/02-organismes-lists-article_list/02-organismes-lists-article_list.rendered.html"}],"lineageR":[{"lineagePattern":"organismes-article_list","lineagePath":"../../patterns/02-organismes-lists-article_list/02-organismes-lists-article_list.rendered.html"}],"patternLineageEExists":true,"patternDesc":"","patternBreadcrumb":{"patternType":"molecules","patternSubtype":"blocks"},"patternExtension":"mustache","patternName":"Article_block","patternPartial":"molecules-article_block","patternState":"","patternEngineName":"mustache","extraOutput":{}}
+    {"cssEnabled":false,"patternLineageExists":true,"patternLineages":[{"lineagePattern":"atoms-button_rubric","lineagePath":"../../patterns/00-atoms-buttons-button_rubric/00-atoms-buttons-button_rubric.rendered.html"},{"lineagePattern":"atoms-hover-article","lineagePath":"../../patterns/00-atoms-images-hover-article/00-atoms-images-hover-article.rendered.html"},{"lineagePattern":"atoms-article","lineagePath":"../../patterns/00-atoms-images-article/00-atoms-images-article.rendered.html"}],"lineage":[{"lineagePattern":"atoms-button_rubric","lineagePath":"../../patterns/00-atoms-buttons-button_rubric/00-atoms-buttons-button_rubric.rendered.html"},{"lineagePattern":"atoms-hover-article","lineagePath":"../../patterns/00-atoms-images-hover-article/00-atoms-images-hover-article.rendered.html"},{"lineagePattern":"atoms-article","lineagePath":"../../patterns/00-atoms-images-article/00-atoms-images-article.rendered.html"}],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"organismes-article_list","lineagePath":"../../patterns/02-organismes-lists-article_list/02-organismes-lists-article_list.rendered.html"}],"lineageR":[{"lineagePattern":"organismes-article_list","lineagePath":"../../patterns/02-organismes-lists-article_list/02-organismes-lists-article_list.rendered.html"}],"patternLineageEExists":true,"patternDesc":"","patternBreadcrumb":{"patternType":"molecules","patternSubtype":"blocks"},"patternExtension":"mustache","patternName":"Article_block","patternPartial":"molecules-article_block","patternState":"","patternEngineName":"mustache","extraOutput":{}}
   </script>
 </div><!--end .sg-pattern-->
   </div> <!--end #sg-patterns-->
@@ -108,10 +120,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1512065780282">
+<script id="pl-js-polyfill-insert-1512648619560">
   (function() {
     if (self != top) {
-      var cb = '1512065780282';
+      var cb = '1512648619560';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -121,10 +133,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1512065780282">
+<script id="pl-js-insert-1512648619560">
   (function() {
     if (self != top) {
-      var cb = '1512065780282';
+      var cb = '1512648619560';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
