--- a/patterns/02-organismes-lists-article_list/02-organismes-lists-article_list.markup-only.html
+++ b/patterns/02-organismes-lists-article_list/02-organismes-lists-article_list.markup-only.html
@@ -1,56 +1,181 @@
-<div class="article_block">
-  <img src="../../image/button_black.png" alt="Avatar" class="" />
-  <img src="../../image/button_black2.png" alt="Avatar" class="" />
-  <img src="../../image/button_black3.png" alt="Avatar" class="" />
+<div class="list-article">
+  <div class="article_block">
 
-  <h2>This is a button </h2>
-  <p>A paragraph (from the Greek paragraphos, "to write beside" or "written beside") is a self-contained unit of a discourse in writing dealing with a particular point or idea. A paragraph consists of one or more sentences. Though not required by the syntax
-    of any language, paragraphs are usually an expected part of formal writing, used to organize longer prose.</p>
+    <button class="c-btn-rubric">
+  Democracking
+</button>
+
+    <div class="hover-article-on">
+      <div class="picthover">
+        <div class="heartmargin"><img src="../../image/heartwhite.png" alt="Avatar" class="" />
+        </div>
+        <img src="../../image/clockwhite.png" alt="Avatar" class="" />
+
+
+      </div>
+    </div>
+    <img src="../../image/girl.png" alt="Avatar" class="article-image" />
+
+    <div class="title">Jean-Pierre Coffe arrêté pour trafic de bitcoins, plus de 700.000 euros détournés</div>
+    <div class="resume">Ses amis et sa famille sous le choc, nous raconte les secrets de meilleures recettes avant qu’il ne soit trop tard. </div>
+    <div class="autor">Jean Roucas / 31.09.17</div>
+  </div>
+
+  <div class="article_block">
+
+    <button class="c-btn-rubric">
+  Democracking
+</button>
+
+    <div class="hover-article-on">
+      <div class="picthover">
+        <div class="heartmargin"><img src="../../image/heartwhite.png" alt="Avatar" class="" />
+        </div>
+        <img src="../../image/clockwhite.png" alt="Avatar" class="" />
+
+
+      </div>
+    </div>
+    <img src="../../image/girl.png" alt="Avatar" class="article-image" />
+
+    <div class="title">Jean-Pierre Coffe arrêté pour trafic de bitcoins, plus de 700.000 euros détournés</div>
+    <div class="resume">Ses amis et sa famille sous le choc, nous raconte les secrets de meilleures recettes avant qu’il ne soit trop tard. </div>
+    <div class="autor">Jean Roucas / 31.09.17</div>
+  </div>
+
+  <div class="article_block">
+
+    <button class="c-btn-rubric">
+  Democracking
+</button>
+
+    <div class="hover-article-on">
+      <div class="picthover">
+        <div class="heartmargin"><img src="../../image/heartwhite.png" alt="Avatar" class="" />
+        </div>
+        <img src="../../image/clockwhite.png" alt="Avatar" class="" />
+
+
+      </div>
+    </div>
+    <img src="../../image/girl.png" alt="Avatar" class="article-image" />
+
+    <div class="title">Jean-Pierre Coffe arrêté pour trafic de bitcoins, plus de 700.000 euros détournés</div>
+    <div class="resume">Ses amis et sa famille sous le choc, nous raconte les secrets de meilleures recettes avant qu’il ne soit trop tard. </div>
+    <div class="autor">Jean Roucas / 31.09.17</div>
+  </div>
+
+  <div class="article_block">
+
+    <button class="c-btn-rubric">
+  Democracking
+</button>
+
+    <div class="hover-article-on">
+      <div class="picthover">
+        <div class="heartmargin"><img src="../../image/heartwhite.png" alt="Avatar" class="" />
+        </div>
+        <img src="../../image/clockwhite.png" alt="Avatar" class="" />
+
+
+      </div>
+    </div>
+    <img src="../../image/girl.png" alt="Avatar" class="article-image" />
+
+    <div class="title">Jean-Pierre Coffe arrêté pour trafic de bitcoins, plus de 700.000 euros détournés</div>
+    <div class="resume">Ses amis et sa famille sous le choc, nous raconte les secrets de meilleures recettes avant qu’il ne soit trop tard. </div>
+    <div class="autor">Jean Roucas / 31.09.17</div>
+  </div>
 
 </div>
 
-<div class="article_block">
-  <img src="../../image/button_black.png" alt="Avatar" class="" />
-  <img src="../../image/button_black2.png" alt="Avatar" class="" />
-  <img src="../../image/button_black3.png" alt="Avatar" class="" />
+<div class="list-article2">
+  <div class="article_block">
 
-  <h2>This is a button </h2>
-  <p>A paragraph (from the Greek paragraphos, "to write beside" or "written beside") is a self-contained unit of a discourse in writing dealing with a particular point or idea. A paragraph consists of one or more sentences. Though not required by the syntax
-    of any language, paragraphs are usually an expected part of formal writing, used to organize longer prose.</p>
+    <button class="c-btn-rubric">
+  Democracking
+</button>
+
+    <div class="hover-article-on">
+      <div class="picthover">
+        <div class="heartmargin"><img src="../../image/heartwhite.png" alt="Avatar" class="" />
+        </div>
+        <img src="../../image/clockwhite.png" alt="Avatar" class="" />
+
+
+      </div>
+    </div>
+    <img src="../../image/girl.png" alt="Avatar" class="article-image" />
+
+    <div class="title">Jean-Pierre Coffe arrêté pour trafic de bitcoins, plus de 700.000 euros détournés</div>
+    <div class="resume">Ses amis et sa famille sous le choc, nous raconte les secrets de meilleures recettes avant qu’il ne soit trop tard. </div>
+    <div class="autor">Jean Roucas / 31.09.17</div>
+  </div>
+
+  <div class="article_block">
+
+    <button class="c-btn-rubric">
+  Democracking
+</button>
+
+    <div class="hover-article-on">
+      <div class="picthover">
+        <div class="heartmargin"><img src="../../image/heartwhite.png" alt="Avatar" class="" />
+        </div>
+        <img src="../../image/clockwhite.png" alt="Avatar" class="" />
+
+
+      </div>
+    </div>
+    <img src="../../image/girl.png" alt="Avatar" class="article-image" />
+
+    <div class="title">Jean-Pierre Coffe arrêté pour trafic de bitcoins, plus de 700.000 euros détournés</div>
+    <div class="resume">Ses amis et sa famille sous le choc, nous raconte les secrets de meilleures recettes avant qu’il ne soit trop tard. </div>
+    <div class="autor">Jean Roucas / 31.09.17</div>
+  </div>
+
+  <div class="article_block">
+
+    <button class="c-btn-rubric">
+  Democracking
+</button>
+
+    <div class="hover-article-on">
+      <div class="picthover">
+        <div class="heartmargin"><img src="../../image/heartwhite.png" alt="Avatar" class="" />
+        </div>
+        <img src="../../image/clockwhite.png" alt="Avatar" class="" />
+
+
+      </div>
+    </div>
+    <img src="../../image/girl.png" alt="Avatar" class="article-image" />
+
+    <div class="title">Jean-Pierre Coffe arrêté pour trafic de bitcoins, plus de 700.000 euros détournés</div>
+    <div class="resume">Ses amis et sa famille sous le choc, nous raconte les secrets de meilleures recettes avant qu’il ne soit trop tard. </div>
+    <div class="autor">Jean Roucas / 31.09.17</div>
+  </div>
+
+  <div class="article_block">
+
+    <button class="c-btn-rubric">
+  Democracking
+</button>
+
+    <div class="hover-article-on">
+      <div class="picthover">
+        <div class="heartmargin"><img src="../../image/heartwhite.png" alt="Avatar" class="" />
+        </div>
+        <img src="../../image/clockwhite.png" alt="Avatar" class="" />
+
+
+      </div>
+    </div>
+    <img src="../../image/girl.png" alt="Avatar" class="article-image" />
+
+    <div class="title">Jean-Pierre Coffe arrêté pour trafic de bitcoins, plus de 700.000 euros détournés</div>
+    <div class="resume">Ses amis et sa famille sous le choc, nous raconte les secrets de meilleures recettes avant qu’il ne soit trop tard. </div>
+    <div class="autor">Jean Roucas / 31.09.17</div>
+  </div>
 
 </div>
-
-<div class="article_block">
-  <img src="../../image/button_black.png" alt="Avatar" class="" />
-  <img src="../../image/button_black2.png" alt="Avatar" class="" />
-  <img src="../../image/button_black3.png" alt="Avatar" class="" />
-
-  <h2>This is a button </h2>
-  <p>A paragraph (from the Greek paragraphos, "to write beside" or "written beside") is a self-contained unit of a discourse in writing dealing with a particular point or idea. A paragraph consists of one or more sentences. Though not required by the syntax
-    of any language, paragraphs are usually an expected part of formal writing, used to organize longer prose.</p>
-
-</div>
-
-<div class="article_block">
-  <img src="../../image/button_black.png" alt="Avatar" class="" />
-  <img src="../../image/button_black2.png" alt="Avatar" class="" />
-  <img src="../../image/button_black3.png" alt="Avatar" class="" />
-
-  <h2>This is a button </h2>
-  <p>A paragraph (from the Greek paragraphos, "to write beside" or "written beside") is a self-contained unit of a discourse in writing dealing with a particular point or idea. A paragraph consists of one or more sentences. Though not required by the syntax
-    of any language, paragraphs are usually an expected part of formal writing, used to organize longer prose.</p>
-
-</div>
-
-<div class="article_block">
-  <img src="../../image/button_black.png" alt="Avatar" class="" />
-  <img src="../../image/button_black2.png" alt="Avatar" class="" />
-  <img src="../../image/button_black3.png" alt="Avatar" class="" />
-
-  <h2>This is a button </h2>
-  <p>A paragraph (from the Greek paragraphos, "to write beside" or "written beside") is a self-contained unit of a discourse in writing dealing with a particular point or idea. A paragraph consists of one or more sentences. Though not required by the syntax
-    of any language, paragraphs are usually an expected part of formal writing, used to organize longer prose.</p>
-
-</div>
-
-<a href="#">See more</a>
